k8s/overlays/dev/metrics-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: waza-metrics-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: metrics.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: waza-metrics
                port:
                  number: 3000
